@@ -1158,5 +1158,14 @@ GENDER_TO_REF
 <ref gender> = <gend>
 ;
 ;/////////////////////////////////////////////////////////////////////////////
+; Misc promotion
+;
+#TemplateActionAlg
+DEGREE_TO_REF
+<degree> != %
+=
+<ref degree> = <degree>
+
+;/////////////////////////////////////////////////////////////////////////////
 ;/////////////////////////////// END OF FILE /////////////////////////////////
 ;/////////////////////////////////////////////////////////////////////////////
