@@ -1,7 +1,7 @@
-The sand has run out.
-END.
-He stood at the goal line.
 Is there a better way?
+END.
+The sand has run out.
+He stood at the goal line.
 There was a time when we were young.
 Truffles picked during the spring are tasty.
 I have eaten twelve truffles.
